k8s/apps/baro-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baro-gateway
  labels:
    app: baro-gateway
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: baro-gateway
  template:
    metadata:
      labels:
        app: baro-gateway
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: baro-gateway
          image: 299369991605.dkr.ecr.ap-northeast-2.amazonaws.com/baro-prod/baro-gateway:sha-cbbaca0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
