k8s/apps/baro-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: baro-gateway
  labels:
    app: baro-gateway
spec:
  type: ClusterIP
  selector:
    app: baro-gateway
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
